# iot-link-flutter

./: .flutter-plugins-dependencies  .gitignore  LOGGER_INTEGRATION_SUMMARY.md  README.md  pubspec.yaml
.ci/: build.yml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/5b654f469cbe2e62b241c9c7b1c85b08/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
.dart_tool/flutter_build/ac2a6ea0b805dd8cf77f511f20b42a44/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d
.dart_tool/flutter_build/d7675ca39df579e5d0549cdbc6f3a952/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/tencent/iot/link/demo/iot_link_flutter/: MainActivity.java
android/app/src/main/kotlin/com/tencent/encoder/: AudioEncoder.kt  VideoEncoder.kt
android/app/src/main/kotlin/com/tencent/iot/explorer/link/: MainActivity.kt
android/app/src/main/kotlin/com/tencent/xp2p_sdk_example/: MainActivity.kt
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Classes/: AACEncoderPlugin.swift  VideoEncoder.swift
lib/: audio_recorder.dart  main.dart  two_way_call_page.dart  video_stream_page.dart
lib/base/: base_xp2p_stream_page.dart
lib/base/capabilities/: audio_talk_capability.dart  video_capture_capability.dart
lib/pages/: two_way_call_page.dart  video_stream_page.dart
lib/services/audio/: aac_encoder_service.dart  audio_recorder.dart
lib/services/video/: native_encoder.dart  video_capture_service.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
test/: widget_test.dart
xp2p_sdk/: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
xp2p_sdk/android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
xp2p_sdk/android/src/main/: AndroidManifest.xml
xp2p_sdk/android/src/main/kotlin/com/tencent/xp2p_sdk/: Xp2pSdkPlugin.kt
xp2p_sdk/android/src/test/kotlin/com/tencent/xp2p_sdk/: Xp2pSdkPluginTest.kt
xp2p_sdk/doc/: XP2P SDK接口说明.md  日志打印保存.md
xp2p_sdk/ios/: build_ios.sh  xp2p_sdk.podspec  xp2p_sdk.podspec.json
xp2p_sdk/ios/Classes/: Xp2pSdkPlugin.swift  dart_bridge.h
xp2p_sdk/ios/Libraries/TencentENET.framework/: Info.plist
xp2p_sdk/lib/: xp2p_sdk.dart
xp2p_sdk/lib/src/: command.dart  config_util.dart  http_utils.dart  log_config.dart  xp2p.dart  xp2p_app_config.dart  xp2p_callback.dart  xp2p_error_code.dart  xp2p_ffi.dart  xp2p_types.dart
xp2p_sdk/lib/src/log/: logger.dart
xp2p_sdk/lib/src/media/: tx_live_player.dart
xp2p_sdk/lib/src/media_server/: flv_ffi_bindings.dart  flv_packer.dart
xp2p_sdk/lib/src/soundtouch/: sound_touch.dart
xp2p_sdk/lib/src/utils/: file_utils.dart  string_ext.dart
xp2p_sdk/src/: dart_bridge.cpp  dart_bridge.h
xp2p_sdk/src/include/: appWrapper.h
xp2p_sdk/src/soundtouch/: soundtouch_c_api.cpp  soundtouch_c_api.h
xp2p_sdk/test/: xp2p_sdk_test.dart
